@@ -2,6 +2,7 @@ libkafka 0.2.0
 ==============
 * Travis CI integration added. Fixed --as-needed linker error on Ubuntu.
 * autotools/autoconf fixed. Support for make, make check, make distcheck.
+* RPM generation fixed. "make rpm" produces an RPM that successfully installs (tested on CentOS 6)
 
 libkafka 0.1.0 (9.5.2013)
 ==============
